--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ dark:text-white">
     
     <div class="fixed top-0 right-0 w-11/12 -z-10 translate-y-[-80%]
     dark:hidden">
-     <img src="./images/header-bg-color.png" alt="" class="w-full"> 
+     <img src="./IMAGES/headerbgcolor.png" alt="" class="w-full"> 
     </div>
 
     <nav class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center 
     justify-between z-50 font-Ovo">
-        <img src="./images/logo.png" alt="Logo" 
+        <img src="./IMAGES/logo.png" alt="Logo" 
         class="w-28 cursor-pointer mr-14 dark:hidden">
 
         <img src="./images/logo_dark.png" alt="Logo" 
@@ -42,8 +42,8 @@ dark:text-white">
 
   <div class="flex item-center gap-4"> 
         <button onclick="toggleTheme()">
-            <img src="./images/moon_icon.png" alt="" class="w-6 dark:hidden">
-            <img src="./images/sun_icon.png" alt="" class="w-6 hidden dark:block">
+            <img src="./IMAGES/moonicon.png" alt="" class="w-6 dark:hidden">
+            <img src="./IMAGES/sunicon.png" alt="" class="w-6 hidden dark:block">
 
         </button>
 
@@ -51,7 +51,7 @@ dark:text-white">
         class="hidden lg:flex item-center gap-3 px-10 py-2.5 border 
         border-gray-500 rounded-full ml-4 font-Ovo dark:border-white/50">
         Contact 
-            <img src="./images/arrow-icon.png" alt="" class="w-3">
+            <img src="./IMAGES/arrowicon.png" alt="" class="w-3">
             <img src="./images/arrow-icon-dark.png" alt="" class="w-3 hidden dark:block">
 
         </a>
@@ -59,7 +59,7 @@ dark:text-white">
 
 
             <button class="block md:hidden ml-3" onclick="openMenu()">
-                <img src="./images/menu-black.png" alt="" class="w-6" dark:hidden>
+                <img src="./IMAGES/menublack.png" alt="" class="w-6" dark:hidden>
                 <img src="./images/menu-black-white.png" alt="" class="w-6 hidden dark:block">
 
             </button>
@@ -77,8 +77,8 @@ dark:text-white">
 
 
         <div class="absolute right-6 top-6 " onclick="closeMenu()">
-            <img src="./images/close-black.png" alt="" class="w-5 cursor-pointer dark:hidden">
-            <img src="./images/close-white.png" alt="" class="w-5 cursor-pointer hidden dark:block">
+            <img src="./IMAGES/closeblack.png" alt="" class="w-5 cursor-pointer dark:hidden">
+            <img src="./IMAGES/closewhite.png" alt="" class="w-5 cursor-pointer hidden dark:block">
 
         </div>
 
