--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ dark:text-white">
         <img src="./IMAGES/logo.png" alt="Logo" 
         class="w-28 cursor-pointer mr-14 dark:hidden">
 
-        <img src="./images/logo_dark.png" alt="Logo" 
+        <img src="./IMAGES/logo.png" alt="Logo" 
         class="w-28 cursor-pointer mr-14 hidden dark:block">
 
         <ul class="hidden md:flex  item-center gap-6 lg:gap-8 rounded-full 
