--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ dark:text-white">
         border-gray-500 rounded-full ml-4 font-Ovo dark:border-white/50">
         Contact 
             <img src="./IMAGES/arrowicon.png" alt="" class="w-3">
-            <img src="./images/arrow-icon-dark.png" alt="" class="w-3 hidden dark:block">
+            <img src="./IMAGES/arrowicondark.png" alt="" class="w-3 hidden dark:block">
 
         </a>
 
@@ -60,7 +60,7 @@ dark:text-white">
 
             <button class="block md:hidden ml-3" onclick="openMenu()">
                 <img src="./IMAGES/menublack.png" alt="" class="w-6" dark:hidden>
-                <img src="./images/menu-black-white.png" alt="" class="w-6 hidden dark:block">
+                <img src="./IMAGES/menu-black-white.png" alt="" class="w-6 hidden dark:block">
 
             </button>
   </div> 
@@ -310,7 +310,7 @@ dark:text-white">
 
     <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
 
-        <div class="aspect-square bg-[url('./images/work1.jpg')] 
+        <div class="aspect-square bg-[url('./IMAGES/work1.jpg')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
@@ -324,7 +324,7 @@ dark:text-white">
 
              <div class="border rounded-full border-black w-9 aspect-square flex
              items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
-                <img src="./images/send-icon.png" alt="" class="w-5">
+                <img src="./IMAGES/send-icon.png" alt="" class="w-5">
              </div>
 
              </div>
@@ -335,7 +335,7 @@ dark:text-white">
 
 
 
-            <div class="aspect-square bg-[url('./images/work-2.jpeg')] 
+            <div class="aspect-square bg-[url('./IMAGES/work-2.jpeg')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
@@ -359,7 +359,7 @@ dark:text-white">
 
 
 
-            <div class="aspect-square bg-[url('./images/work-3.jpg')] 
+            <div class="aspect-square bg-[url('./IMAGES/work-3.jpg')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
@@ -384,7 +384,7 @@ dark:text-white">
 
 
 
-            <div class="aspect-square bg-[url('./images/work-4.webp')] 
+            <div class="aspect-square bg-[url('./IMAGES/work-4.webp')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
