--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@ dark:text-white">
     <!-- ---------services----------- -->
 
     <div id="services" class="w-full px-[12%] py-10 scroll-mt-20">
-        <h4 class="text-center mb-2 text-lg font-Ovo">What i offer</h4>
+        <h4 class="text-center mb-2 text-lg font-Ovo">What I Offer</h4>
         <h2 class="text-center text-5xl font-Ovo">My Services</h2>
 
-        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 ">I am Frontend Developer From Nepal, with -- year of experience
+        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 ">I Am Frontend Developer From Nepal, with -- year of experience
             in multiple companies like -----------------..</p>
 
 
@@ -262,7 +262,7 @@ dark:text-white">
              <div class="border border-gray-400 rounded-lg px-8 py-12 
              hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover:translate-y-1 duration-500
              dark:hover:bg-darkHover dark:hover:shadow-white">
-                <img src="./IMAGES/-icon.png" alt="" class="w-10">
+                <img src="./IMAGES/mobileapp.png" alt="" class="w-10">
                 <h3 class="text-lg my-4 text-gray-700 dark:text-white">Mobile App</h3> <!--remaning-->
                 <p class="text-sm text-gray-600 leading-5 dark:text-white/80">Web development is the process of building, programming</p>
                 <a href="" class="flex items-center gap-2 text-sm mt-4">Read More <img src="./IMAGES/right-arrow.png" alt="" class="w-4 "></a>
@@ -273,8 +273,8 @@ dark:text-white">
              <div class="border border-gray-400 rounded-lg px-8 py-12 
              hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover:translate-y-1 duration-500
              dark:hover:bg-darkHover dark:hover:shadow-white">
-                <img src="./IMAGES/-icon.png" alt="" class="w-10">
-                <h3 class="text-lg my-4 text-gray-700 dark:text-white">UI/Ux design</h3>  <!--remaning-->
+                <img src="./IMAGES/uiuxdesign.png" alt="" class="w-10">
+                <h3 class="text-lg my-4 text-gray-700 dark:text-white">UI/UX design</h3>  <!--remaning-->
                 <p class="text-sm text-gray-600 leading-5 dark:text-white/80">Web development is the process of building, programming</p>
                 <a href="" class="flex items-center gap-2 text-sm mt-4">Read More <img src="./IMAGES/right-arrow.png" alt="" class="w-4 "></a>
              </div>
@@ -284,7 +284,7 @@ dark:text-white">
              <div class="border border-gray-400 rounded-lg px-8 py-12 
              hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover:translate-y-1 duration-500
              dark:hover:bg-darkHover dark:hover:shadow-white">
-                <img src="./IMAGES/-icon.png" alt="" class="w-10">
+                <img src="./IMAGES/graphicsdesign.png" alt="" class="w-10">
                 <h3 class="text-lg my-4 text-gray-700 dark:text-white">Graphics design</h3> <!--remaning-->
                 <p class="text-sm text-gray-600 leading-5 dark:text-white/80">Web development is the process of building, programming</p>
                 <a href="" class="flex items-center gap-2 text-sm mt-4">Read More <img src="./IMAGES/right-arrow.png" alt="" class="w-4 "></a>
