change in the image:

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ dark:text-white">
                  </ul>
 
 <!-- -------------tools i used----------- -->
-               <h4 class="my-6 text-gray-700 font-Ovo dark:text-white/80">Tools i use</h4>
+               <h4 class="my-6 text-gray-700 font-Ovo dark:text-white/80">Tools I Use</h4>
                
                <ul class="flex items-center gap-3 sm:gap-s">
                 <li class="flex items-center justify-center w-12 
@@ -209,7 +209,7 @@ dark:text-white">
                 <li class="flex items-center justify-center w-12 
                 sm:w-14 aspect-square border border-gray-400 round-lg 
                 cursor-pointer hover:-translate-y-1 duration-500">
-                   <img src="./IMAGES/canva.png" alt="" class="w-5 sm:w-7"> 
+                   <img src="./IMAGES/canvaicon.png" alt="" class="w-5 sm:w-7"> 
                 </li>
 
                 <li class="flex items-center justify-center w-12 
@@ -228,7 +228,7 @@ dark:text-white">
                 <li class="flex items-center justify-center w-12 
                 sm:w-14 aspect-square border border-gray-400 round-lg 
                 cursor-pointer hover:-translate-y-1 duration-500">
-                   <img src="./IMAGES/git.png" alt="" class="w-5 sm:w-7"> 
+                   <img src="./IMAGES/githunicon.png" alt="" class="w-5 sm:w-7"> 
                 </li>
 
                </ul>
