--- a/index.html
+++ b/index.html
@@ -343,8 +343,10 @@ dark:text-white">
              duration-500 group-hover:bottom-7">
 
              <div>
-                <h2 class="font-semibold">Geo based app</h2>
-                <p class="text-sm text-gray-700">Mobile app</p>
+                <h2 class="font-semibold">kldkfd</h2>
+                <!-- Geo based app -->
+                <p class="text-sm text-gray-700"></p>
+                <!-- Mobile app -->
              </div>
 
              <div class="border rounded-full border-black w-9 aspect-square flex
@@ -392,8 +394,10 @@ dark:text-white">
              duration-500 group-hover:bottom-7">
 
              <div>
-                <h2 class="font-semibold">UI/UX designing</h2>
-                <p class="text-sm text-gray-700">UT/Ux design</p>
+                <h2 class="font-semibold"></h2>
+                <!-- UI/UX designing -->
+                <p class="text-sm text-gray-700"></p>
+                <!-- UT/Ux design -->
              </div>
 
              <div class="border rounded-full border-black w-9 aspect-square flex
