--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 
 </head>
+
 <body class="overflow-x-hidden font-Outfit leading-8 dark:bg-darkTheme 
 dark:text-white">
     
@@ -100,8 +101,7 @@ dark:text-white">
 <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3 font-Ovo">Hi! I'm Rajendra Chaudhary 👋<img src=".image/hand-icon.png" alt="" class="w-6"></h3>
 
 <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Frontend Web Developer. </h1>
-<p class="max-w-2xl mx-auto font-Ovo">I am Frontend Developer From Nepal, with -- year of experience
-    in multiple companies like -----------------..
+<p class="max-w-2xl mx-auto font-Ovo">I am a Frontend Developer from Nepal with -- years of experience, creating user-friendly websites and web applications.
 </p>
 
 
@@ -137,7 +137,7 @@ dark:text-white">
 
         <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
             <div class="max-w-max mx-auto relative">
-                <img src="./IMAGES/user-image.jpg" alt="" class="w-64 sm:w-80 rounded-3xl max-w-none">
+                <img src="./IMAGES/rajendra.jpg" alt="" class="w-64 sm:w-80 rounded-3xl max-w-none">
 
                 <div class="bg-white w-1/2 aspect-square absolute 
                 right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 
