--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ dark:text-white">
              duration-500 group-hover:bottom-7">
 
              <div>
-                <h2 class="font-semibold">Frontend Project</h2>
-                <p class="text-sm text-gray-700">Web Design</p>
+                <h2 class="font-semibold">CHAT_APP_PROJECT</h2>
+                <p class="text-sm text-gray-700">MERN_STACK</p>
              </div>
 
              <div class="border rounded-full border-black w-9 aspect-square flex
