--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ dark:text-white">
 
              <div class="border rounded-full border-black w-9 aspect-square flex
              items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
-                <img src="./IMAGES/send-icon.png" alt="" class="w-5">
+                <img src="./IMAGES/send-icons.png" alt="" class="w-5">
              </div>
 
              </div>
