--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ dark:text-white">
 
     <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
 
-        <div class="aspect-square bg-[url('./IMAGES/work1.jpg')] 
+        <div class="aspect-square bg-[url('./IMAGES/send-icons.png')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
@@ -324,7 +324,7 @@ dark:text-white">
 
              <div class="border rounded-full border-black w-9 aspect-square flex
              items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
-                <img src="./IMAGES/send-icons.png" alt="" class="w-5">
+                <img src="./IMAGES/send-icon.png" alt="" class="w-5">
              </div>
 
              </div>
