--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ dark:text-white">
         </p>
 
 
-
+    <a href="https://chat-app-rho-pearl.vercel.app/login" target="_blank">
     <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
 
         <div class="aspect-square bg-[url('./IMAGES/send-icons.png')] 
@@ -329,6 +329,7 @@ dark:text-white">
 
              </div>
             </div>
+</a>
 
 
 
