Update link to chat app homepage

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ dark:text-white">
         </p>
 
 
-    <a href="https://chat-app-rho-pearl.vercel.app/login" target="_blank">
+    <a href="https://chat-app-rho-pearl.vercel.app/" target="_blank">
     <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
 
         <div class="aspect-square bg-[url('./IMAGES/send-icons.png')] 
