--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@ dark:text-white">
 
 
 
+    <a href="https://virtualassistant-1-41tx.onrender.com/signup" target="_blank">
 
-
-            <div class="aspect-square bg-[url('./IMAGES/work-2.jpeg')] 
+            <div class="aspect-square bg-[url('./IMAGES/assistant.png')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
@@ -344,9 +344,9 @@ dark:text-white">
              duration-500 group-hover:bottom-7">
 
              <div>
-                <h2 class="font-semibold">kldkfd</h2>
+                <h2 class="font-semibold">VIRTUAL_ASSISTANT_PROJECT</h2>
                 <!-- Geo based app -->
-                <p class="text-sm text-gray-700"></p>
+                <p class="text-sm text-gray-700">MERN_STACK</p>
                 <!-- Mobile app -->
              </div>
 
@@ -358,6 +358,7 @@ dark:text-white">
              </div>
             </div>
 
+</a>
 
 
 
