Rename project title from 'VIRTUAL_ASSISTANT_PROJECT' to 'VIRTUAL_ASSISTANT'

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ dark:text-white">
              duration-500 group-hover:bottom-7">
 
              <div>
-                <h2 class="font-semibold">VIRTUAL_ASSISTANT_PROJECT</h2>
+                <h2 class="font-semibold">VIRTUAL_ASSISTANT</h2>
                 <!-- Geo based app -->
                 <p class="text-sm text-gray-700">MERN_STACK</p>
                 <!-- Mobile app -->
