--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ dark:text-white">
 
     <a href="https://virtualassistant-1-41tx.onrender.com/signup" target="_blank">
 
-            <div class="aspect-square bg-[url('./IMAGES/assistants.jpg')] 
+            <div class="aspect-square bg-[url('./IMAGES/assistant.png')] 
             bg-no-repeat bg-cover bg-center rounded-lg relative 
             cursor-pointer group">
              <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 
