--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ dark:text-white">
 <img src="./IMAGES/profile-img.jpg" alt="image" class="rounded-full w-32 ">
 <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3 font-Ovo">Hi! I'm Rajendra Chaudhary 👋<img src=".image/hand-icon.png" alt="" class="w-6"></h3>
 
-<h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Frontend Web Developer. </h1>
-<p class="max-w-2xl mx-auto font-Ovo">I am a Frontend Developer from Nepal with -- years of experience, creating user-friendly websites and web applications.
+<h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Full Stack Web Developer & DevOps Engineer </h1>
+<p class="max-w-2xl mx-auto font-Ovo">I am a Full Stack Web Developer and DevOps Engineer from Nepal with -- years of experience, building scalable web applications and managing reliable deployment pipelines. I create user-friendly, high-performance websites while ensuring efficient infrastructure, automation, and smooth CI/CD processes
 </p>
 
 
@@ -148,10 +148,9 @@ dark:text-white">
                 </div>
             </div>
             <div class="flex-1">
-              <p class="mb-10 max-w-2xl font-Ovo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, 
-                sed quo corrupti non laudantium blanditiis eum laboriosam nisi maxime,
-                 aspernatur commodi soluta excepturi voluptates perferendis deleniti. Est, 
-                 voluptatem. Inventore quae provident blanditiis?</p>
+              <p class="mb-10 max-w-2xl font-Ovo">I am a passionate Full Stack Web Developer and DevOps Engineer from Nepal with -- years of experience building modern, scalable, 
+                  and user-friendly web applications. I specialize in both frontend and backend development, creating seamless digital experiences using clean, efficient,
+                  and maintainable code. I am dedicated to delivering quality solutions that not only meet business requirements but also provide exceptional user experiences.</p>
 
 
                  <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
