--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ dark:text-white">
 
 
                         <h3 class="my-4 font-semibold text-gray-700 dark:text-white/80">Languages</h3>
-                        <p class="text-gray-600 text-sm dark:text-white/80">HTML, CSS, JavaScript , React Js</p>
+                        <p class="text-gray-600 text-sm dark:text-white/80">MERN Stack, Express.js, Node.js, React.js, JavaScript, HTML, CSS, Linux, Java, DevOps</p>
                 
                     </li>
 
@@ -178,7 +178,7 @@ dark:text-white">
                         <img src="./IMAGES/edu-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
 
                         <h3 class="my-4 font-semibold text-gray-700 dark:text-white/80">Education</h3>
-                        <p class="text-gray-600 text-sm dark:text-white/80">BE in Computer Science </p>
+                        <p class="text-gray-600 text-sm dark:text-white/80">B.E. in Computer Science, Chitkara University, Himachal Pradesh</p>
                 
                     </li>
 
@@ -243,8 +243,8 @@ dark:text-white">
         <h4 class="text-center mb-2 text-lg font-Ovo">What I Offer</h4>
         <h2 class="text-center text-5xl font-Ovo">My Services</h2>
 
-        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 ">I Am Frontend Developer From Nepal, with -- year of experience
-            in multiple companies like -----------------..</p>
+        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 ">I am a Full Stack Web Developer and DevOps Engineer from Nepal, recently graduated and passionate about building scalable web 
+            applications and learning modern development and deployment practices.</p>
 
 
            <div class="grid grid-cols-auto gap-6 my-10 ">
@@ -300,9 +300,8 @@ dark:text-white">
         <h4 class="text-center mb-2 text-lg font-Ovo">My Portfolio</h4>
         <h2 class="text-center text-5xl font-Ovo">My Latest Work</h2>
 
-        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Welcome to my web
-            development portfolio! Explore a collection of projects showcasing my experties 
-            in front-end development.
+        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Welcome to my web development portfolio! Explore a collection of projects that showcase my expertise in full stack development, 
+            modern web technologies, and DevOps practices.
         </p>
 
 
