Replace image source with profile.jpeg

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ dark:text-white">
 
         <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
             <div class="max-w-max mx-auto relative">
-                <img src="./IMAGES/rajendra.jpg" alt="" class="w-64 sm:w-80 rounded-3xl max-w-none">
+                <img src="profile.jpeg" alt="" class="w-64 sm:w-80 rounded-3xl max-w-none">
 
                 <div class="bg-white w-1/2 aspect-square absolute 
                 right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 
