--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ dark:text-white">
 
     <!-- -------------------header----------------------- -->
 <div class="w-11/12 max-w-3xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4">
-<img src="./IMAGES/profile-img.jpg" alt="image" class="rounded-full w-32 ">
+<img src="profile.jpeg" alt="image" class="rounded-full w-32 ">
 <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3 font-Ovo">Hi! I'm Rajendra Chaudhary 👋<img src=".image/hand-icon.png" alt="" class="w-6"></h3>
 
 <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Full Stack Web Developer & DevOps Engineer </h1>
