Integrate EmailJS for contact form handling
Added EmailJS integration for contact form submission.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link rel="preconnect" href="https://fonts.gstgitatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    
 </head>
 
 <body class="overflow-x-hidden font-Outfit leading-8 dark:bg-darkTheme 
@@ -432,48 +435,62 @@ dark:text-white">
 
 <!-- -----------contact---------------- -->
 
-
 <div id="contact" class="w-full px-[12%] py-10 scroll-mt-20 
 bg-[url('./images/footer-bg-color.avif')] bg-no-repeat bg-[length:90%_auto] bg-center
 dark:bg-none">
+
     <h4 class="text-center mb-2 text-lg font-Ovo">Connect With Me</h4>
     <h2 class="text-center text-5xl font-Ovo">Get In Touch</h2>
 
-    <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">I'd love to here from you!
-        If you have any question. comments or feedback, pleae use the form below
+    <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">
+        I'd love to hear from you! If you have any questions or feedback,
+        please fill out the form below.
     </p>
 
+    <form id="contact-form" class="max-w-2xl mx-auto">
 
-    <form action="" class="max-w-2xl mx-auto ">
-      <div class="grid grid-cols-auto gap-6 mt-10 mb-8">
-        <input type="text" placeholder="Enter your name" class="flex-1 p-3 outline-none
-         border-[0.5px] border-gray-400 
-         rounded-md bg-white 
-         dark:bg-darkHover/30 dark:border-white/90">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-10 mb-8">
 
+            <input 
+                type="text" 
+                name="user_name"
+                placeholder="Enter your name" 
+                required
+                class="p-3 outline-none border-[0.5px] border-gray-400 
+                rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90">
 
+            <input 
+                type="email" 
+                name="user_email"
+                placeholder="Enter your email" 
+                required
+                class="p-3 outline-none border-[0.5px] border-gray-400 
+                rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90">
 
-         <input type="email" placeholder="Enter your email" class="flex-1 p-3 outline-none
-         border-[0.5px] border-gray-400 
-         rounded-md bg-white
-         dark:bg-darkHover/30 dark:border-white/90">
+        </div>
 
-       </div>
+        <textarea 
+            rows="6" 
+            name="message"
+            placeholder="Enter your message" 
+            required
+            class="w-full p-4 outline-none border-[0.5px] border-gray-400 
+            rounded-md bg-white mb-6
+            dark:bg-darkHover/30 dark:border-white/90"></textarea>
 
-         <textarea rows="6" placeholder="Enter your message" class="w-full p-4 
-         outline-none border-[0.5px] border-gray-400 rounded-md bg-white mb-6
-         dark:bg-darkHover/30 dark:border-white/90"></textarea>
-      
+        <button 
+            type="submit"
+            class="py-3 px-8 w-max flex items-center justify-between 
+            gap-2 bg-black/80 text-white rounded-full
+            mx-auto hover:bg-black duration-500
+            dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">
 
-         <button class="py-3 px-8 w-max flex items-center justify-between 
-         gap-2 bg-black/80 text-white rounded-full
-          mx-auto hover:bg-black duration-500
-          dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">Submit Now
+            Submit Now
             <img src="./IMAGES/right-arrow-white.png" alt="" class="w-4">
-         </button>
+        </button>
+
     </form>
 </div>
-
 
 
 
@@ -511,5 +528,31 @@ dark:bg-none">
 
 </div>
     <script src="./script.js"></script>
+
+
+
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+
+    emailjs.init("MpW4TYxXkBOvyjLB2");
+
+    document.getElementById("contact-form")
+    .addEventListener("submit", function(event) {
+        event.preventDefault();
+
+        emailjs.sendForm("service_dozzkuu", 
+                         "template_26v214d", 
+                         this)
+        .then(function() {
+            alert("Message Sent Successfully ✅");
+            document.getElementById("contact-form").reset();
+        }, function(error) {
+            alert("Failed to send ❌");
+            console.log(error);
+        });
+    });
+
+});
+</script>
 </body>
 </html>
