--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ dark:text-white">
     <img src="./IMAGES/right-arrow-white.png" alt="" class="w-4"></a>
 
 
-    <a href="https://rajendrachy.github.io/RESUMEA/" download
+    <a href="" download
     class="px-10 py-3 border rounded-full border-gray-500 flex 
     items-center gap-2 bg-white dark:text-black">
     My resumea 
